# onesat

./: .gitignore
api/: Cargo.toml  Dockerfile  README.md
api/migrations/: 20241009000001_create_deposits_table.down.sql  20241009000001_create_deposits_table.up.sql  20241009000002_alter_deposit_id_to_text.down.sql  20241009000002_alter_deposit_id_to_text.up.sql  20250115222722_create_deposits_table.sql  README.md
api/src/: coingecko.rs  main.rs  primitives.rs  registry.rs  settings.rs
api/src/orderbook/: mod.rs
api/src/server/: handler.rs  mod.rs
app/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
contracts/: .gitignore  .tool-versions  README.md  Scarb.toml  env.example  jest.config.js  package.json  tsconfig.json
contracts/deployments/: contracts_registryContract_sepolia_0x24c25259fccf3e64867e3514fcb7aef114bc9236c4794f542be19d06b244f69.json  contracts_registryContract_sepolia_0x35adf4500ed7fe828ff4bb9e25ebb43f3a9b8d0eff24cad506b04c321799253.json  contracts_registryContract_sepolia_0x4133de0d7bf76bc68362acdec93643e92c30c888fcf480eb8e964cb971bb65e.json  contracts_registryContract_sepolia_0x5d73929cae3a98aa941e19d1457bf929edfca9f27e79108f79997bfa4308f99.json  contracts_registryContract_sepolia_0x5e74299c59159632bfe9784f4d47729f7eb82c38216e4f10002a65ef813e1bf.json  contracts_registryContract_sepolia_0x6141aa4f74107d638c21f3c64c2852c6441707507738a03b3b5ebd969b1044b.json  contracts_registryContract_sepolia_0x68d1080a20044fcbb1a43f0d2cdda4ba531fb5be5235ccb242af6ac5853b5c4.json  contracts_registryContract_sepolia_0x7cd0c2e6f588cd8614b32a2a0da246187c1325f95ea2449ed89cb8ba7ee724c.json  contracts_registryContract_sepolia_0x8de160a79a703eff6113576d70fff712a7ef43f0e930d58a07ff5805c0d210.json  contracts_registryContract_sepolia_0xc9111a2d8cd09b73f8b144000041cc1311824ee31fb1966b69c084605f4f18.json  contracts_registryContract_sepolia_0xfde7cef0bd4373377f0039c7b5102ec48dd737ea7d44140c8fd5e6de4410d0.json  contracts_uda_sepolia_0x14b5ce16de65ffc8b78af2e01dc6c72e531f52dd6cb3f64d6c8300722f1e8ec.json  contracts_uda_sepolia_0x17fa83f9840a5d7719eadf497d2d930fc3a6869bf2a892077bbac457871fa29.json  contracts_uda_sepolia_0x18a34404135c6faf9efda8982f5d99a6704ac0de76644977361170b1e19eb8d.json  contracts_uda_sepolia_0x1efa082bca7763ff365347eac5776ec9e625f087fa74ade64e11bb75d9e011d.json  contracts_uda_sepolia_0x25af55cde8b0e0a77818fdd90d008a4d048c16e0e5ea3e0f404a15d3062fb4c.json  (+4 more)
contracts/scripts/: declare.ts  deploy.ts  utils.ts
relayer/: Cargo.toml  settings.example.toml
relayer/src/: main.rs  settings.rs
relayer/src/server/: handlers.rs  mod.rs
vault-watcher/: Cargo.toml  Dockerfile
vault-watcher/src/: main.rs  primitives.rs  settings.rs  watcher.rs
vault-watcher/src/orderbook/: mod.rs
vault-watcher/src/watcher/: erc20.rs  errors.rs  mod.rs  registry.rs
(+74 files in other folders)
