[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
config = "0.15.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
