[package]
name = "vault-watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.7"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "derive",
    "macros",
    "bigdecimal",
    "chrono",
    "json",
    "migrate",
] }
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
rand = "0.8.5"
eyre = "0.6.12"
tokio = { version = "1.47.1", features = ["full"] }
